# hscats

./: .hlint.yaml  CHANGELOG.md  README.md  hscats.cabal
app/: Defs.hs  Do.hs  Main.hs  RecursionSchemes.hs
lib/: Cats.hs  Defs.hs  Do.hs  RecursionSchemes.hs  Uncategorised.hs
lib/Cats/: Adjoint.hs  Associative.hs  Binary.hs  Cat.hs  Category.hs  Compose.hs  Constructor.hs  Core.hs  CrossProduct.hs  Curry.hs  Day.hs  Delta.hs  Exponential.hs  Flip.hs  Functor.hs  Hom.hs  Id.hs  MonoidObject.hs  Monoidal.hs  Opposite.hs  Product.hs  Profunctor.hs
lib/Cats/Adjoint/: Delta.hs  Δ.hs
lib/Cats/Category/: Cat.hs  Exponential.hs  Op.hs  Opposite.hs  Product.hs
lib/Cats/Functor/: Cat.hs  Compose.hs  Curry.hs  Flip.hs  Hom.hs  Id.hs  Spin.hs
test/: Do.hs  Main.hs  RecursionSchemes.hs  Uncategorised.hs
