cabal-version:      2.4
name:               hscats
version:            0.1.0.0
author:             Liam Goodacre
maintainer:         goodacre.liam@gmail.com
extra-source-files:
    CHANGELOG.md
    README.md

executable hscats
    main-is: Main.hs
    other-modules:
      Defs,
      Do,
      RecursionSchemes
    build-depends:
      , base
    hs-source-dirs: app
    default-language: GHC2024
    default-extensions:
      AllowAmbiguousTypes,
      BlockArguments,
      FunctionalDependencies,
      ImplicitParams,
      NoImplicitPrelude,
      QualifiedDo,
      QuantifiedConstraints,
      RequiredTypeArguments,
      TypeAbstractions,
      TypeFamilies,
      UndecidableInstances,
      UndecidableSuperClasses
    ghc-options: -O2 -Wall
