cabal-version:      2.4
name:               hscats
version:            0.1.0.0
author:             Liam Goodacre
maintainer:         goodacre.liam@gmail.com
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
      Cats.Category,
      Cats.Category.Op,
      Cats.Category.Product,
      Cats.Category.Exponential,
      Cats.Functor,
      Cats.Functor.Curry,
      Cats.Adjoint,
      Cats,
      Do,
      RecursionSchemes
    build-depends:
      , base
    hs-source-dirs: lib
    default-language: GHC2024
    default-extensions:
      AllowAmbiguousTypes,
      BlockArguments,
      FunctionalDependencies,
      ImplicitParams,
      NoImplicitPrelude,
      QualifiedDo,
      QuantifiedConstraints,
      RequiredTypeArguments,
      TypeAbstractions,
      TypeFamilies,
      UndecidableInstances,
      UndecidableSuperClasses
    ghc-options: -O2 -Wall

test-suite hscats-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
      , base
      , hscats
    hs-source-dirs: test
    default-language: GHC2024
    default-extensions:
      AllowAmbiguousTypes,
      BlockArguments,
      FunctionalDependencies,
      ImplicitParams,
      NoImplicitPrelude,
      QualifiedDo,
      QuantifiedConstraints,
      RequiredTypeArguments,
      TypeAbstractions,
      TypeFamilies,
      UndecidableInstances,
      UndecidableSuperClasses
    ghc-options: -O2 -Wall
