cabal-version:      2.4
name:               hscats
version:            0.1.0.0
author:             Liam Goodacre
maintainer:         goodacre.liam@gmail.com
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
      Cats,
      Cats.Adjoint,
      Cats.Associative,
      Cats.Binary,
      Cats.Cat,
      Cats.Category,
      Cats.Compose,
      Cats.Constructor,
      Cats.Curry,
      Cats.Day,
      Cats.Delta,
      Cats.Exponential,
      Cats.Flip,
      Cats.Functor,
      Cats.Hom,
      Cats.Id,
      Cats.MonoidObject,
      Cats.Monoidal,
      Cats.Opposite,
      Cats.Product,
      Do,
      RecursionSchemes
    other-modules:
      Uncategorised
    build-depends:
      , base
      , ghc-prim
    hs-source-dirs: lib
    default-language: GHC2024
    default-extensions:
      AllowAmbiguousTypes,
      BlockArguments,
      FunctionalDependencies,
      ImplicitParams,
      NoImplicitPrelude,
      QualifiedDo,
      QuantifiedConstraints,
      RequiredTypeArguments,
      TypeAbstractions,
      TypeData,
      TypeFamilies,
      UndecidableInstances,
      UndecidableSuperClasses
    ghc-options: -O2 -Wall

test-suite hscats-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
      , base
      , hscats
    hs-source-dirs: test
    default-language: GHC2024
    default-extensions:
      AllowAmbiguousTypes,
      BlockArguments,
      FunctionalDependencies,
      ImplicitParams,
      NoImplicitPrelude,
      QualifiedDo,
      QuantifiedConstraints,
      RequiredTypeArguments,
      TypeAbstractions,
      TypeData,
      TypeFamilies,
      UndecidableInstances,
      UndecidableSuperClasses
    ghc-options: -O2 -Wall
